# synthesia-video-converter

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  output.midi  pyproject.toml  requirements.txt
algorithm/: index.html
comparison-of-existing-solutions/: index.html
docs/: algorithm.md  comparison-of-existing-solutions.md  index.md  project-structure.md
docs/stylesheets/: extra.css
project-structure/: index.html
search/: search_index.json
src/: main.py
src/cli/: main.py
src/converter/: __init__.py  falling_key_to_note.py  midi_to_sheet_music_pdf.py  musicxml_to_midi.py  musicxml_to_sheet_music_pdf.py  ping.py
src/debugger/: __init__.py  draw_text.py
src/entities/: __init__.py  falling_key.py  falling_rectangle.py  keyboard.py  note.py  play_line.py
src/extractor/: __init__.py  detect_falling_keys.py  detect_keyboard.py  detect_play_line.py  extract_musical_information_from_video.py  extract_notes_from_video.py  merge_falling_keys.py  process_frame.py
src/extractor/frame_helpers/: __init__.py  blur_frame.py  cut_frame_vertically.py  find_frame_contours.py  frame_contours_to_falling_rectangles.py  grayscale_frame.py  increase_frame_contrast.py  perform_morphological_open_with_frame.py  prepare_frame_for_analysis.py  threshold_frame.py
src/io/: __init__.py  save_notes_to_midi_file.py
src/meta/: singleton.py
src/midi/: __init__.py
src/settings/: settings.py
tests/: __init__.py  test_main.py
tests/converter/: midi_to_sheet_music_pdf.py
tests/data/: Betacustic | Married Life.midi  PianoDeuss | Naruto OST - The Raising Fighting Spirit.midi
tests/entities/: test_keyboard.py  test_note.py
tests/extractor/: falling_keys.py  test_merge_falling_keys.py
